# ValuraAI-Financial-Agent

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: agno_agent.py  app.py  chat_endpoint.py  data_schemas.py  demo.py  financial_agent.py  gemini.py  prompts.py
src/tools/: formulas.py
tests/: test_all_formulas.py
