[project]
name = "financial-planning-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.7",
    "fastapi[all]>=0.116.1",
    "google-genai>=1.28.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.3",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]
